# pyfreedts

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
src/: bindings.cpp
src/pyfreedts/: __init__.py  cli.py  execution.py  mesh.py  screen.py  utils.py
src/pyfreedts/_bin/: CNV  DTS  GEN
tests/: test_installation.py
