[tool.poetry]
name = "pyfreedts"
version = "2.1.0.post1"
description = "Python wrapper for the FreeDTS C++ project"
authors = ["Valentin Maurer <valentin.maurer@embl-hamburg.de>"]
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
packages = [{include = "pyfreedts", from = "src"}]
include = [
    "src/pyfreedts/_cpp/**/*",
    "src/pyfreedts/_bin/**/*",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
dts = "pyfreedts.cli:run_dts"
dts_screen = "pyfreedts.cli:run_dts_screen"
cnv = "pyfreedts.cli:run_cnv"
gen = "pyfreedts.cli:run_gen"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
build-verbosity = 3
before-test = "ls -la /tmp/cibuildwheel/built_wheel/ || echo 'No wheel found'"
test-command = "pytest {project}/tests"
test-requires = "pytest"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.macos]
skip = "cp38-macosx_* cp39-macosx_* cp310-macosx_* cp312-macosx_*"
archs = ["arm64"]
